[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thread-search"
version = "0.1.0"
description = "Polite local threadmark search tooling for a forum reader thread."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
]

[project.urls]
Repository = "https://github.com/zvory/threadsearch"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
thread-search = "planquest.cli:main"
planquest = "planquest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
